# typeset

./: .gitignore  .gitlab-ci.yml  .travis.yml  CMakeLists.txt  LICENSE  README.md
apps/: CMakeLists.txt
apps/common/: CMakeLists.txt  charbuffer.h  pagewidget.cpp  pagewidget.h  qt-typeset-engine.cpp  qt-typeset-engine.h  renderwidget.cpp  renderwidget.h
apps/equation-editor/: CMakeLists.txt  fonttreewidget.cpp  fonttreewidget.h  mainwindow.cpp  mainwindow.h  renderwidget.cpp  renderwidget.h  suggestionbar.cpp  suggestionbar.h  typeset-engine.cpp  typeset-engine.h
apps/format-editor/: CMakeLists.txt  editor.cpp  editor.h  main.cpp  mainwindow.cpp  mainwindow.h
apps/linebreaks-viewer/: CMakeLists.txt  linebreaks-viewer-render-widget.cpp  linebreaks-viewer-render-widget.h  linebreaks-viewer.cpp  linebreaks-viewer.h  main.cpp
apps/page-editor/: CMakeLists.txt  assignment-processor.cpp  assignment-processor.h  fontparser.cpp  fontparser.h  horizontalmode.cpp  horizontalmode.h  inputstream.cpp  inputstream.h  mainwindow.cpp  mainwindow.h  mathmode.cpp  mathmode.h  mode.cpp  mode.h  pageeditor-format.cpp  pageeditor-format.h  typesetting-machine.cpp  typesetting-machine.h  verticalmode.cpp  verticalmode.h
doc/: mathcode.tex
examples/: CMakeLists.txt  example-math.cpp  example-math.h  example-page.cpp  example-page.h  example-paragraph.cpp  example-paragraph.h  example-single-line.cpp  example-single-line.h  example-tex.cpp  example-tex.h  example.cpp  example.h  main.cpp  mainwindow.cpp  mainwindow.h  stringbox.cpp  stringbox.h  textpainter.h  textprocessor.cpp  textprocessor.h  typeset-qt.cpp  typeset-qt.h
include/tex/: box.h  boxmetrics.h  charbox.h  defs.h  dimen.h  font.h  fontdimen.h  fontmetrics.h  glue.h  hbox.h  hlist.h  kern.h  layoutreader.h  lexer.h  linebreaks.h  listbox.h  mathchars.h  mathcode.h  node.h  parser.h  parshape.h  penalty.h  rule.h  showlists.h  symbol.h  token.h  tokstream.h  typeset.h  unicode.h  units.h  vbox.h
include/tex/math/: atom.h  boundary.h  fontchange.h  fraction.h  math-typeset.h  mathlist.h  mathonoff.h  matrix.h  root.h  style.h  stylechange.h
include/tex/parsing/: commands.h  dimenparser.h  format.h  glueparser.h  horizontalmode.h  inputstream.h  kernparser.h  machine.h  mathmode.h  mathparser.h  mathparserfrontend.h  mode.h  optionsparser.h  parshapeparser.h  parsing-utils.h  preprocessor.h  registers.h  retcode.h  typesetting-instructions.h  typesetting-machine.h  typesetting-visitor.h  verticalmode.h
src/: box.cpp  font.cpp  fontmetrics.cpp  glue.cpp  hbox.cpp  hlist.cpp  kern.cpp  lexer.cpp  linebreaks.cpp  listbox.cpp  mathcode.cpp  node.cpp  penalty.cpp  rule.cpp  showlists.cpp  typeset.cpp  vbox.cpp
src/math/: atom.cpp  boundary.cpp  fraction.cpp  math-typeset.cpp  matrix.cpp  style.cpp
src/parsing/: commands.cpp  dimenparser.cpp  format.cpp  glueparser.cpp  horizontalmode.cpp  inputstream.cpp  kernparser.cpp  mathmode.cpp  mathparser.cpp  mathparserfrontend.cpp  mode.cpp  optionsparser.cpp  parshapeparser.cpp  preprocessor.cpp  typesetting-machine.cpp  verticalmode.cpp
tests/: CMakeLists.txt  main.cpp  test-atom.cpp  test-format.cpp  test-glue-parsing.cpp  test-lexer.cpp  test-machine.cpp  test-math-parser.cpp  test-parser.cpp  test-parsers.cpp  test-preprocessor.cpp  test-typeset.cpp  test-typeset.h  test.cpp  test.h
tfm/: CMakeLists.txt  README.md
tfm/include/tex/: tfm.h
tfm/src/: tfm.cpp
